# AoC22

./: .gitignore  CMakeLists.txt  README.md
Day1/: main.cpp
Day10/: main.cpp
Day11/: main.cpp
Day12/: main.cpp
Day13/: main.cpp
Day14/: main.cpp
Day2/: main.cpp
Day3/: main.cpp
Day4/: main.cpp
Day5/: main.cpp
Day6/: main.cpp
Day7/: main.cpp
Day8/: main.cpp
Day9/: main.cpp
util/: util.cpp  util.hpp
