cmake_minimum_required(VERSION 3.10)
project(AoC22)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic -mtune=native -march=native")
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer")
    message("Building for debug")
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
    message("Building for release")
endif ()

file(GLOB_RECURSE DIRS
        LIST_DIRECTORIES True
        ${CMAKE_SOURCE_DIR}/Day*/)
list(FILTER DIRS INCLUDE REGEX "AoC22/*Day*")
message(${DIRS})
foreach(DAY ${DIRS})
    file(GLOB_RECURSE FILES ${DAY}/*.cpp)
    foreach(EXEC ${FILES})
        get_filename_component(DNAME ${DAY} NAME_WLE)
        get_filename_component(NAME ${EXEC} NAME_WLE)
        set(NAME ${DNAME}_${NAME})
        message(\t${EXEC}\ ->\ target:\ ${NAME})
        add_executable(${NAME} ${EXEC})
    endforeach()
endforeach()