cmake_minimum_required(VERSION 3.11)
project(AoC22)
include(FetchContent)

function(get_dependencies DepName Repo IncludeDir)
    message("Fetching ${DepName} library...")
    FetchContent_Declare(${DepName}
            GIT_REPOSITORY ${Repo})
    FetchContent_MakeAvailable(${DepName})
    include_directories(${${DepName}_SOURCE_DIR}/${IncludeDir})
    message("successfully fetched ${DepName} library")
endfunction()

get_dependencies(iterators https://github.com/Timmifixedit/IteratorTools .)
get_dependencies(bimap https://github.com/Timmifixedit/BidirectionalMap .)
get_dependencies(format https://github.com/fmtlib/fmt include)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_FLAGS "-Wall -Wextra -Wpedantic -mtune=native -march=native")
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address -fno-omit-frame-pointer")
    message("Building for debug")
else()
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
    message("Building for release")
endif ()

include_directories(util)
file(GLOB_RECURSE SOURCES ${CMAKE_SOURCE_DIR}/util/*.cpp)

file(GLOB_RECURSE DIRS
        LIST_DIRECTORIES True
        ${CMAKE_SOURCE_DIR}/Day*/)
list(FILTER DIRS INCLUDE REGEX "AoC22/*Day*")
message(${DIRS})
foreach(DAY ${DIRS})
    file(GLOB_RECURSE FILES ${DAY}/*.cpp)
    foreach(EXEC ${FILES})
        get_filename_component(DNAME ${DAY} NAME_WLE)
        get_filename_component(NAME ${EXEC} NAME_WLE)
        set(NAME ${DNAME}_${NAME})
        set(INPUT_FILE \"${CMAKE_SOURCE_DIR}/${DNAME}/input.txt\")
        message(\t${EXEC}\ ->\ target:\ ${NAME})
        add_executable(${NAME} ${EXEC} ${SOURCES})
        target_compile_definitions(${NAME} PRIVATE __IFILE__=${INPUT_FILE})
        target_link_libraries(${NAME} PRIVATE fmt::fmt-header-only)
    endforeach()
endforeach()
